<resources>
    <string name="app_name">Swoosh</string>
    <string name="get_started">Get Started</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_and_dominate_the_league">Find a team in your city and dominate the league</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-ed</string>
    <string name="mens">Mens</string>
    <string name="desired_league">Desired League:</string>
    <string name="next">Next</string>
    <string name="background_image">backgroundImage</string>
    <string name="app_logo_image">app logo Image</string>
    <string name="i_am_a">I am a:</string>
    <string name="finish">Finish</string>
    <string name="beginner">Beginner</string>
    <string name="baller">Baller</string>
    <string name="looking_for_a_co_ed_beginner_league_near_you">Looking for a co-ed beginner league near you…</string>
</resources>